--- a/software/line-sensor/src-data-collector/App.xaml
+++ b/software/line-sensor/src-data-collector/App.xaml
@@ -1,7 +1,4 @@
-﻿<Application
-    x:Class="src_data_collector.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:src_data_collector">
-
-</Application>
+﻿<Application x:Class="line_sensor.data_collector.App"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+/>
