- added code to connect to serial device and verify it - commands are synchronous by default

--- a/software/line-sensor/src-data-collector/ui/MainPage.xaml
+++ b/software/line-sensor/src-data-collector/ui/MainPage.xaml
@@ -40,7 +40,7 @@
         <ComboBox Grid.Row="0"
                   Grid.Column="1"
                   ItemsSource="{Binding AllSupportedSerialDevices}"
-                  SelectedItem="{Binding SelectedSerialDevice}"
+                  SelectedItem="{Binding SelectedSerialDevice, Mode=TwoWay}"
                   IsEnabled="{Binding ConnectedPositionControllerDeviceModel.IsConnected, Converter={StaticResource NotConverter}}"
                   Margin="10,5,0,5"
                   HorizontalAlignment="Stretch"
@@ -83,7 +83,7 @@
         <ComboBox Grid.Row="1"
                   Grid.Column="1"
                   ItemsSource="{Binding AllSupportedBleDevices}"
-                  SelectedItem="{Binding SelectedBleDevice}"
+                  SelectedItem="{Binding SelectedBleDevice, Mode=TwoWay}"
                   IsEnabled="{Binding ConnectedWirelessLineSensorDeviceModel.IsConnected, Converter={StaticResource NotConverter}}"
                   Margin="10,5,0,5"
                   HorizontalAlignment="Stretch"
