--- a/software/line-sensor-data-collector/ui/MainPage.xaml
+++ b/software/line-sensor-data-collector/ui/MainPage.xaml
@@ -22,6 +22,7 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
@@ -152,9 +153,24 @@
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
 
-            <Button Margin="10,10,5,10"
+            <Button Margin="10,5,5,5"
                     Grid.Row="0"
-                    Grid.RowSpan="3"
+                    Grid.Column="0"
+                    Background="Green"
+                    Foreground="Black"
+                    FontWeight="Bold"
+                    FontSize="12"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Center"
+                    Command="{Binding PositionControllerDeviceModel.CalibratePositionControllerCommand}"
+                    CommandParameter="{Binding PositionControllerDeviceModel}"
+            >
+                Calibrate
+            </Button>
+
+            <Button Margin="10,5,5,10"
+                    Grid.Row="1"
+                    Grid.RowSpan="2"
                     Grid.Column="0"
                     Background="Green"
                     Foreground="Black"
@@ -170,7 +186,7 @@
                 </TextBlock>
             </Button>
 
-            <Button Margin="5,10,5,10"
+            <Button Margin="5,5,5,10"
                     Grid.Row="0"
                     Grid.RowSpan="3"
                     Grid.Column="1"
@@ -188,7 +204,7 @@
                 </TextBlock>
             </Button>
 
-            <Button Margin="5,10,10,10"
+            <Button Margin="5,5,10,5"
                     Grid.Row="0"
                     Grid.Column="2"
                     Background="Blue" 
@@ -202,7 +218,7 @@
                 Reset Position Controller
             </Button>
 
-            <Button Margin="5,10,10,10"
+            <Button Margin="5,5,10,5"
                     Grid.Row="1"
                     Grid.Column="2"
                     Background="Blue" 
@@ -216,7 +232,7 @@
                 Reset Wireless Line Sensor
             </Button>
 
-            <Button Margin="5,10,10,10"
+            <Button Margin="5,5,10,10"
                     Grid.Row="2"
                     Grid.Column="2"
                     Background="Blue" 
@@ -233,113 +249,182 @@
 
         <Grid Grid.Row="3"
               Grid.Column="0"
-              Background="#FF2E2E2E"
         >
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="0.65*" />
+                <ColumnDefinition Width="0.35*" />
             </Grid.ColumnDefinitions>
 
-            <TextBlock Grid.Row="0"
-                       Grid.Column="0"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Right"
-                       Margin="10,5,0,5"
+            <Grid Grid.Row="0"
+                  Grid.Column="0"
+                  Background="#FF161616"
             >
-                Position Controller Total:
-            </TextBlock>
-            <TextBox Grid.Row="0"
-                     Grid.Column="1"
-                     IsReadOnly="True"
-                     Margin="10,5,0,5"
-                     Text="{Binding PositionControllerDeviceModel.PacketsTotalNumber}"
-            />
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
 
-            <TextBlock Grid.Row="0"
-                       Grid.Column="2"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Right"
-                       Margin="10,5,0,5"
-            >
-                CRC:
-            </TextBlock>
-            <TextBox Grid.Row="0"
-                     Grid.Column="3"
-                     IsReadOnly="True"
-                     Margin="10,5,0,5"
-                     Text="{Binding PositionControllerDeviceModel.PacketsCrcFailuresNumber}"
-            />
+                <TextBlock Grid.Row="0"
+                           Grid.Column="0"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"
+                           Margin="10,5,0,5"
+                >
+                    Position Controller Total:
+                </TextBlock>
+                <TextBox Grid.Row="0"
+                         Grid.Column="1"
+                         IsReadOnly="True"
+                         Margin="10,5,0,5"
+                         Text="{Binding PositionControllerDeviceModel.PacketsTotalNumber}"
+                />
 
-            <TextBlock Grid.Row="0"
-                       Grid.Column="4"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Right"
-                       Margin="10,5,0,5"
-            >
-                Failures:
-            </TextBlock>
-            <TextBox Grid.Row="0"
-                     Grid.Column="5"
-                     IsReadOnly="True"
-                     Margin="10,5,10,5"
-                     Text="{Binding PositionControllerDeviceModel.PacketsFailuresNumber}"
-            />
+                <TextBlock Grid.Row="0"
+                           Grid.Column="2"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"
+                           Margin="10,5,0,5"
+                >
+                    CRC:
+                </TextBlock>
+                <TextBox Grid.Row="0"
+                         Grid.Column="3"
+                         IsReadOnly="True"
+                         Margin="10,5,0,5"
+                         Text="{Binding PositionControllerDeviceModel.PacketsCrcFailuresNumber}"
+                />
 
-            <TextBlock Grid.Row="1"
-                       Grid.Column="0"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Right"
-                       Margin="10,5,0,5"
-            >
-                Line Sensor Total:
-            </TextBlock>
-            <TextBox Grid.Row="1"
-                     Grid.Column="1"
-                     IsReadOnly="True"
-                     Margin="10,5,0,5"
-                     Text="{Binding ConnectedWirelessLineSensorDeviceModel.PacketsTotalNumber}"
-            />
+                <TextBlock Grid.Row="0"
+                           Grid.Column="4"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"
+                           Margin="10,5,0,5"
+                >
+                    Failures:
+                </TextBlock>
+                <TextBox Grid.Row="0"
+                         Grid.Column="5"
+                         IsReadOnly="True"
+                         Margin="10,5,10,5"
+                         Text="{Binding PositionControllerDeviceModel.PacketsFailuresNumber}"
+                />
 
-            <TextBlock Grid.Row="1"
-                       Grid.Column="2"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Right"
-                       Margin="10,5,0,5"
-            >
-                CRC:
-            </TextBlock>
-            <TextBox Grid.Row="1"
-                     Grid.Column="3"
-                     IsReadOnly="True"
-                     Margin="10,5,0,5"
-                     Text="{Binding ConnectedWirelessLineSensorDeviceModel.PacketsCrcFailuresNumber}"
-            />
+                <TextBlock Grid.Row="1"
+                           Grid.Column="0"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"
+                           Margin="10,5,0,5"
+                >
+                    Position:
+                </TextBlock>
+                <TextBox Grid.Row="1"
+                         Grid.Column="1"
+                         IsReadOnly="True"
+                         Margin="10,5,0,5"
+                         Text="{Binding PositionControllerDeviceModel.Position}"
+                />
 
-            <TextBlock Grid.Row="1"
-                       Grid.Column="4"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Right"
-                       Margin="10,5,0,5"
+                <CheckBox Grid.Row="1"
+                          Grid.Column="3"
+                          Grid.ColumnSpan="2"
+                          Margin="10,0,10,0"
+                          IsEnabled="False"
+                          IsChecked="{Binding PositionControllerDeviceModel.IsEmergencyStop}"
+                >
+                    Emergency Stop
+                </CheckBox>
+                <CheckBox Grid.Row="1"
+                          Grid.Column="5"
+                          Margin="10,0,10,0"
+                          IsEnabled="False"
+                          IsChecked="{Binding PositionControllerDeviceModel.IsDeviceBusy}"
+                >
+                    Busy
+                </CheckBox>
+            </Grid>
+
+            <Grid Grid.Row="0"
+                  Grid.Column="1"
+                  Background="#FF1D0909"
             >
-                Failures:
-            </TextBlock>
-            <TextBox Grid.Row="1"
-                     Grid.Column="5"
-                     IsReadOnly="True"
-                     Margin="10,5,10,5"
-                     Text="{Binding ConnectedWirelessLineSensorDeviceModel.PacketsFailuresNumber}"
-            />
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Grid.Row="0"
+                           Grid.Column="0"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"
+                           Margin="10,5,0,5"
+                >
+                    Total:
+                </TextBlock>
+                <TextBox Grid.Row="0"
+                         Grid.Column="1"
+                         IsReadOnly="True"
+                         Margin="10,5,0,5"
+                         Text="{Binding ConnectedWirelessLineSensorDeviceModel.PacketsTotalNumber}"
+                />
+
+                <TextBlock Grid.Row="1"
+                           Grid.Column="0"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"
+                           Margin="10,5,0,5"
+                >
+                    CRC:
+                </TextBlock>
+                <TextBox Grid.Row="1"
+                         Grid.Column="1"
+                         IsReadOnly="True"
+                         Margin="10,5,0,5"
+                         Text="{Binding ConnectedWirelessLineSensorDeviceModel.PacketsCrcFailuresNumber}"
+                />
+
+                <TextBlock Grid.Row="0"
+                           Grid.Column="2"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"
+                           Margin="10,5,0,5"
+                >
+                    Failures:
+                </TextBlock>
+                <TextBox Grid.Row="0"
+                         Grid.Column="3"
+                         IsReadOnly="True"
+                         Margin="10,5,10,5"
+                         Text="{Binding ConnectedWirelessLineSensorDeviceModel.PacketsFailuresNumber}"
+                />
+
+                <TextBlock Grid.Row="1"
+                           Grid.Column="3"
+                           HorizontalAlignment="Right"
+                           VerticalAlignment="Bottom"
+                           Margin="0,0,10,10"
+                           Text="Line Sensor"
+                />
+            </Grid>
         </Grid>
 
-        <ScrollViewer Grid.Row="4"
+        <ScrollViewer Grid.Row="5"
                       Grid.Column="0"
                       Margin="10,10,10,5"
                       HorizontalScrollBarVisibility="Auto"
@@ -348,10 +433,18 @@
                       VerticalScrollMode="Auto" 
         >
             <ListView ItemsSource="{Binding LogEntries}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Text="{Binding Title}" />
+                            <TextBlock Text="{Binding Details}" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
             </ListView>
         </ScrollViewer>
 
-        <Grid Grid.Row="5"
+        <Grid Grid.Row="6"
               Grid.Column="0"
               Margin="10,5,10,10"
         >
