--- a/software/line-sensor-data-collector/ui/MainPage.xaml
+++ b/software/line-sensor-data-collector/ui/MainPage.xaml
@@ -9,8 +9,12 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     Loaded="Page_Loaded"
-    d:DesignWidth="640"
-    d:DesignHeight="480" FocusVisualPrimaryBrush="Black" Foreground="White"
+    d:DesignWidth="1024"
+    d:DesignHeight="768"
+    FocusVisualPrimaryBrush="Black"
+    Foreground="White"
+    MinWidth="1024"
+    MinHeight="768"
 >
     <Page.Resources>
         <shared:BooleanNotConverter x:Key="NotConverter" />
@@ -281,13 +285,13 @@
                            HorizontalAlignment="Right"
                            Margin="10,5,0,5"
                 >
-                    Position Controller Total:
+                    Position Controller Status:
                 </TextBlock>
                 <TextBox Grid.Row="0"
                          Grid.Column="1"
                          IsReadOnly="True"
                          Margin="10,5,0,5"
-                         Text="{Binding PositionControllerDeviceModel.PacketsTotalNumber}"
+                         Text="{Binding PositionControllerDeviceModel.StatusDisplayName}"
                 />
 
                 <TextBlock Grid.Row="0"
@@ -296,16 +300,45 @@
                            HorizontalAlignment="Right"
                            Margin="10,5,0,5"
                 >
-                    CRC:
+                    Position:
                 </TextBlock>
                 <TextBox Grid.Row="0"
+                         Grid.Column="3"
+                         IsReadOnly="True"
+                         Margin="10,5,0,5"
+                         Text="{Binding PositionControllerDeviceModel.Position}"
+                />
+
+                <TextBlock Grid.Row="1"
+                           Grid.Column="0"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"
+                >
+                    Total Packets:
+                </TextBlock>
+                <TextBox Grid.Row="1"
+                         Grid.Column="1"
+                         IsReadOnly="True"
+                         Margin="10,5,0,5"
+                         Text="{Binding PositionControllerDeviceModel.PacketsTotalNumber}"
+                />
+
+                <TextBlock Grid.Row="1"
+                           Grid.Column="2"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"
+                           Margin="10,5,0,5"
+                >
+                    CRC:
+                </TextBlock>
+                <TextBox Grid.Row="1"
                          Grid.Column="3"
                          IsReadOnly="True"
                          Margin="10,5,0,5"
                          Text="{Binding PositionControllerDeviceModel.PacketsCrcFailuresNumber}"
                 />
 
-                <TextBlock Grid.Row="0"
+                <TextBlock Grid.Row="1"
                            Grid.Column="4"
                            VerticalAlignment="Center"
                            HorizontalAlignment="Right"
@@ -313,45 +346,12 @@
                 >
                     Failures:
                 </TextBlock>
-                <TextBox Grid.Row="0"
+                <TextBox Grid.Row="1"
                          Grid.Column="5"
                          IsReadOnly="True"
                          Margin="10,5,10,5"
                          Text="{Binding PositionControllerDeviceModel.PacketsFailuresNumber}"
                 />
-
-                <TextBlock Grid.Row="1"
-                           Grid.Column="0"
-                           VerticalAlignment="Center"
-                           HorizontalAlignment="Right"
-                           Margin="10,5,0,5"
-                >
-                    Position:
-                </TextBlock>
-                <TextBox Grid.Row="1"
-                         Grid.Column="1"
-                         IsReadOnly="True"
-                         Margin="10,5,0,5"
-                         Text="{Binding PositionControllerDeviceModel.Position}"
-                />
-
-                <CheckBox Grid.Row="1"
-                          Grid.Column="3"
-                          Grid.ColumnSpan="2"
-                          Margin="10,0,10,0"
-                          IsEnabled="False"
-                          IsChecked="{Binding PositionControllerDeviceModel.IsEmergencyStop}"
-                >
-                    Emergency Stop
-                </CheckBox>
-                <CheckBox Grid.Row="1"
-                          Grid.Column="5"
-                          Margin="10,0,10,0"
-                          IsEnabled="False"
-                          IsChecked="{Binding PositionControllerDeviceModel.IsDeviceBusy}"
-                >
-                    Busy
-                </CheckBox>
             </Grid>
 
             <Grid Grid.Row="0"
@@ -375,7 +375,7 @@
                            HorizontalAlignment="Right"
                            Margin="10,5,0,5"
                 >
-                    Total:
+                    Total Packets:
                 </TextBlock>
                 <TextBox Grid.Row="0"
                          Grid.Column="1"
@@ -415,7 +415,8 @@
                 />
 
                 <TextBlock Grid.Row="1"
-                           Grid.Column="3"
+                           Grid.Column="2"
+                           Grid.ColumnSpan="2"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Bottom"
                            Margin="0,0,10,10"
