--- a/software/line-sensor-data-collector/ui/MainPage.xaml
+++ b/software/line-sensor-data-collector/ui/MainPage.xaml
@@ -59,7 +59,7 @@
 
             <ComboBox Grid.Row="0"
                       Grid.Column="1"
-                      Margin="10,5,10,5"
+                      Margin="10,5,5,5"
                       HorizontalAlignment="Stretch"
                       ItemsSource="{Binding AllSupportedSerialDevices}"
                       SelectedItem="{Binding SelectedSerialDevice, Mode=TwoWay}"
@@ -83,7 +83,7 @@
             <Button Grid.Row="0"
                     Grid.Column="3"
                     Grid.ColumnSpan="2"
-                    Margin="10,10,10,5"
+                    Margin="5,5,10,5"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Stretch"
                     Content="{Binding PositionControllerDeviceModel.ConnectDisconnectTitle}"
@@ -102,7 +102,7 @@
             <ComboBox Grid.Row="1"
                       Grid.Column="1"
                       HorizontalAlignment="Stretch"
-                      Margin="10,5,10,5"
+                      Margin="10,5,5,5"
                       ItemsSource="{Binding AllSupportedBleDevices}"
                       SelectedItem="{Binding SelectedBleDevice, Mode=TwoWay}"
                       IsEnabled="{Binding IsAllSupportedBleDevicesEnabled}"
@@ -124,7 +124,7 @@
 
             <Button Grid.Row="1"
                     Grid.Column="3"
-                    Margin="10,5,5,5"
+                    Margin="5,5,5,5"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Stretch"
                     Content="{Binding BleDeviceToggleScanningCommandTitle}"
@@ -137,7 +137,7 @@
                     Margin="5,5,10,5"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Stretch"
-                    Content="{Binding BleDeviceToggleConnectionCommandTitle}"
+                    Content="{Binding WirelessLineSensorDeviceModel.ConnectDisconnectTitle}"
                     Command="{Binding BleDeviceToggleConnectionCommand}"
                     CommandParameter="{Binding}"
             />
@@ -230,8 +230,8 @@
                     FontSize="12"
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Center"
-                    Command="{Binding ConnectedWirelessLineSensorDeviceModel.ResetWirelessLineSensorCommand}"
-                    CommandParameter="{Binding ConnectedWirelessLineSensorDeviceModel}"
+                    Command="{Binding WirelessLineSensorDeviceModel.ResetWirelessLineSensorCommand}"
+                    CommandParameter="{Binding WirelessLineSensorDeviceModel}"
             >
                 Reset Wireless Line Sensor
             </Button>
@@ -244,8 +244,8 @@
                     FontSize="12"
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Center"
-                    Command="{Binding ConnectedWirelessLineSensorDeviceModel.ResetLineSensorCommand}"
-                    CommandParameter="{Binding ConnectedWirelessLineSensorDeviceModel}"
+                    Command="{Binding WirelessLineSensorDeviceModel.ResetLineSensorCommand}"
+                    CommandParameter="{Binding WirelessLineSensorDeviceModel}"
             >
                 Reset Line Sensor
             </Button>
@@ -381,7 +381,7 @@
                          Grid.Column="1"
                          IsReadOnly="True"
                          Margin="10,5,0,5"
-                         Text="{Binding ConnectedWirelessLineSensorDeviceModel.PacketsTotalNumber}"
+                         Text="{Binding WirelessLineSensorDeviceModel.PacketsTotalNumber}"
                 />
 
                 <TextBlock Grid.Row="1"
@@ -396,7 +396,7 @@
                          Grid.Column="1"
                          IsReadOnly="True"
                          Margin="10,5,0,5"
-                         Text="{Binding ConnectedWirelessLineSensorDeviceModel.PacketsCrcFailuresNumber}"
+                         Text="{Binding WirelessLineSensorDeviceModel.PacketsCrcFailuresNumber}"
                 />
 
                 <TextBlock Grid.Row="0"
@@ -411,7 +411,7 @@
                          Grid.Column="3"
                          IsReadOnly="True"
                          Margin="10,5,10,5"
-                         Text="{Binding ConnectedWirelessLineSensorDeviceModel.PacketsFailuresNumber}"
+                         Text="{Binding WirelessLineSensorDeviceModel.PacketsFailuresNumber}"
                 />
 
                 <TextBlock Grid.Row="1"
