--- a/software/line-sensor-data-collector/ui/MainPage.xaml
+++ b/software/line-sensor-data-collector/ui/MainPage.xaml
@@ -143,6 +143,26 @@
             />
         </Grid>
 
+        <Grid Grid.Row="1"
+              Grid.Column="0"
+        >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Grid.Column="0" VerticalAlignment="Center" Margin="10,5,5,5">Step size:</TextBlock>
+            <TextBox Grid.Column="1" Margin="5,5,5,5" Text="{Binding StepSize, Mode=TwoWay}" />
+
+            <TextBlock Grid.Column="2" VerticalAlignment="Center" Margin="5,5,5,5">Number of samples:</TextBlock>
+            <TextBox Grid.Column="3" Margin="5,5,5,5" Text="{Binding NumberOfSamples, Mode=TwoWay}" />
+        </Grid>
+
         <Grid Grid.Row="2"
               Grid.Column="0"
         >
@@ -182,12 +202,10 @@
                     FontSize="16"
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch"
-                    Command="{Binding CollectDataCommand}"
                     CommandParameter="{Binding}"
+                    Command="{Binding CollectDataCommand}"
             >
-                <TextBlock TextWrapping="Wrap" TextAlignment="Center">
-                    Collect Data
-                </TextBlock>
+                <TextBlock TextWrapping="WrapWholeWords" HorizontalTextAlignment="Center" Text="{Binding CollectDataCommandTitle}" />
             </Button>
 
             <Button Margin="5,5,5,10"
@@ -467,6 +485,7 @@
                      Grid.Column="1"
                      HorizontalAlignment="Stretch"
                      IsReadOnly="True"
+                     Text="{Binding FilePathPrefix}"
             />
         </Grid>
     </Grid>
